<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InstructionsFragment">

<!-- Customize the constraints between the views -->
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header_ins_text"
        style="@style/header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        app:layout_constraintBottom_toTopOf="@+id/sub_ins_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sub_ins_text"
        style="@style/sub_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_text"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/sneaker_ins_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_64"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_64"
        android:layout_marginBottom="@dimen/margin_32"
        android:contentDescription="@string/sneakers"
        android:src="@drawable/ic_starter"
        app:layout_constraintBottom_toTopOf="@+id/header_ins_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/button"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16"
        android:text="@string/finish"
        app:cornerRadius="@dimen/margin_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/margin_16"
        android:layout_height="@dimen/margin_16"
        android:layout_marginStart="@dimen/margin_4"
        android:src="@drawable/circle_black"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/button"
        android:contentDescription="@string/dot_active" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/margin_16"
        android:layout_height="@dimen/margin_16"
        android:src="@drawable/circle_grey"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button"
        android:contentDescription="@string/dot_inactive" />
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>